use default Eclipse browser launcher